src/components/travel-search-filter/travel-search-filter.module.css
.filter {
  display: flex;
  flex-wrap: wrap;
  max-width: 30rem;
  /* TODO: 6px in the design. */
  gap: var(--spacings-small);
}

.transportMode {
  list-style: none;
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: var(--spacings-xSmall);
}

@media (max-width: 650px) {
  .transportMode {
    flex-direction: row;
  }
}

.transportMode label {
  padding: var(--spacings-xSmall) var(--spacings-medium);
  border-radius: var(--border-radius-circle);
  border: 1px solid var(--interactive-interactive_1-default-text);
  color: var(--interactive-interactive_1-default-text);
  transition: border-color 150ms, background-color 150ms;
  cursor: pointer;
  display: flex;
  gap: var(--spacings-xSmall);
}

.transportMode input {
  clip: rect(0 0 0 0);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  display: block;
}

.transportMode input:checked ~ label {
  background-color: var(--interactive-interactive_0-default-background);
  border-color: var(--interactive-interactive_0-default-background);
}

.infoText {
  color: var(--text-colors-disabled);
  max-width: 10rem;
}

